--- a/Pikachu_Website Project/pikachu_website.html
+++ b/Pikachu_Website Project/pikachu_website.html
@@ -32,6 +32,18 @@
       top: -50px;
     }
 
+    .ear1back {
+      width: 40px;
+      height: 90px;
+      background: #0000006e;
+      border-radius: 50% 50% 0 0;
+      position: absolute;
+      top: -50px;
+      left: 20px;
+      transform-origin: bottom center;
+      animation: wave-reverse 2s infinite ease-in-out;
+    }
+
     .ear::after {
       content: '';
       position: absolute;
@@ -187,6 +199,17 @@
       z-index: 0;
     }
 
+    .headback {
+      background: #0000006e;
+      width: 222.9px;
+      height: 200px;
+      border-radius: 50% 50% 45% 45%;
+      position: relative;
+      top: -1435px;
+      right: 8px;
+      z-index: -10;
+    }
+
     .body {
       background: #ffc831;
       width: 190px;
@@ -196,6 +219,17 @@
       border-radius: 50% 50% 5% 5%;
       position: relative;
       z-index: -2;
+    }
+
+    .bodyback {
+      background: #0000006e;
+      width: 215px;
+      height: 200px;
+      top: -1505px;
+      left:  -0px;
+      border-radius: 50% 50% 5% 13%;
+      position: relative;
+      z-index: -10;
     }
 
     .leg1 {
@@ -209,6 +243,17 @@
       z-index: -5;
     }
 
+    .leg1back {
+      background: #0000006e;
+      width: 73px;
+      height: 95px;
+      top: -1768px;
+      right : -15px;
+      border-radius: 0% 0% 25% 25%;
+      position: relative;
+      z-index: -10;
+    }
+
     .leg2 {
       background: #ffc831;
       width:55px;
@@ -220,24 +265,59 @@
       z-index: -5;
     }
 
+    .leg2back {
+      background: #0000006e;
+      width: 73px;
+      height: 95px;
+      top: -1862px;
+      right : -125px;
+      border-radius: 0% 0% 25% 25%;
+      position: relative;
+      z-index: -10;
+    }
+
     .hand1 {
       background: #ffc831;
       width: 50px;
       height: 110px;
-      top: -373px;
-      right: 30px;
+      top: -290px;
+      right: -27px;
       border-radius: 50% 50% 800% 80px;
       position: relative;
-      
+      transform-origin: top center;
       animation: handwave 0.7s infinite ease-in-out;
       z-index: -6;
     }
+
     @keyframes handwave {
       0%   { transform: rotate(110deg); }
       25%  { transform: rotate(120deg); }
       50%  { transform: rotate(130deg); }
       75%  { transform: rotate(120deg); }
       100% { transform: rotate(110deg); }
+    }
+
+
+    .hand1back {
+      background: #0000006e;
+      width: 70px;
+      height: 110px;
+      top: -1725px;
+      right: -18px;
+      border-radius: 50% 50% 800% 80px;
+      position: relative;
+      transform-origin: top center;
+      animation: hand1wave 0.7s infinite ease-in-out;
+      transform: rotate(132deg) scaleX(1);
+      z-index: -10;
+    }
+
+    @keyframes hand1wave {
+      0%   { transform: rotate(105deg); }
+      25%  { transform: rotate(115deg); }
+      50%  { transform: rotate(125deg); }
+      75%  { transform: rotate(115deg); }
+      100% { transform: rotate(105deg); }
     }
 
     .hand2 {
@@ -251,6 +331,19 @@
       transform: rotate(-132deg) scaleX(-1);
       z-index: -6;
     }
+
+    .hand2back {
+      background: #0000006e;
+      width: 70px;
+      height: 110px;
+      top: -1695px;
+      right: -180px;
+      border-radius: 50% 50% 800% 80px;
+      position: relative;
+      transform: rotate(-132deg) scaleX(-1);
+      z-index: -10;
+    }
+
     @keyframes doodleWave {
   0%   { transform: rotate(10deg) translateY(0); }
   25%  { transform: rotate(-10deg) translateY(-1px); }
@@ -449,6 +542,15 @@
       <p><b>© 2025 Hammad. All rights reserved.</b></p>
     </footer>
     </div>
+    <div class="ear1back"></div>
+    <div class="ear2back"></div>
+    <div class="headback"></div>
+    <div class="bodyback"></div>
+    <div class="hand2back"></div>
+    <div class="hand1back"></div>
+    <div class="leg1back"></div>
+    <div class="leg2back"></div>
+
   </div>
 
   <audio id="pikachu-sound" src="pikachu-sound.mp3" preload="auto"></audio>
