--- a/Pikachu_Website Project/pikachu_website.html
+++ b/Pikachu_Website Project/pikachu_website.html
@@ -32,17 +32,30 @@
       top: -50px;
     }
 
-    .ear1back {
+    .ear1shade {
       width: 40px;
       height: 90px;
       background: #0000006e;
       border-radius: 50% 50% 0 0;
       position: absolute;
       top: -50px;
-      left: 20px;
+      left : 40px;
+      z-index: -10;
       transform-origin: bottom center;
-      animation: wave-reverse 2s infinite ease-in-out;
-    }
+      animation: wave-reverse 2s infinite ease-in-out;}
+
+      .ear2shade {
+      width: 40px;
+      height: 120px;
+      background: #0000006e;
+      border-radius: 50% 50% 0 0;
+      position: absolute;
+      top: -40px;
+      left : 160px;
+      z-index: -10;
+      transform-origin: bottom center;
+      animation: wave 2s infinite ease-in-out;}
+
 
     .ear::after {
       content: '';
@@ -199,7 +212,7 @@
       z-index: 0;
     }
 
-    .headback {
+    .headshade {
       background: #0000006e;
       width: 222.9px;
       height: 200px;
@@ -221,7 +234,7 @@
       z-index: -2;
     }
 
-    .bodyback {
+    .bodyshade {
       background: #0000006e;
       width: 215px;
       height: 200px;
@@ -243,7 +256,7 @@
       z-index: -5;
     }
 
-    .leg1back {
+    .leg1shade {
       background: #0000006e;
       width: 73px;
       height: 95px;
@@ -265,7 +278,7 @@
       z-index: -5;
     }
 
-    .leg2back {
+    .leg2shade {
       background: #0000006e;
       width: 73px;
       height: 95px;
@@ -298,7 +311,7 @@
     }
 
 
-    .hand1back {
+    .hand1shade {
       background: #0000006e;
       width: 70px;
       height: 110px;
@@ -332,7 +345,7 @@
       z-index: -6;
     }
 
-    .hand2back {
+    .hand2shade {
       background: #0000006e;
       width: 70px;
       height: 110px;
@@ -542,14 +555,14 @@
       <p><b>© 2025 Hammad. All rights reserved.</b></p>
     </footer>
     </div>
-    <div class="ear1back"></div>
-    <div class="ear2back"></div>
-    <div class="headback"></div>
-    <div class="bodyback"></div>
-    <div class="hand2back"></div>
-    <div class="hand1back"></div>
-    <div class="leg1back"></div>
-    <div class="leg2back"></div>
+    <div class="ear1shade"></div>
+    <div class="ear2shade"></div>
+    <div class="headshade"></div>
+    <div class="bodyshade"></div>
+    <div class="hand2shade"></div>
+    <div class="hand1shade"></div>
+    <div class="leg1shade"></div>
+    <div class="leg2shade"></div>
 
   </div>
 
